[project]
name = "fyp-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "imbalanced-learn==0.12.4",
    "joblib==1.4.2",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "py-solc-x==2.0.4",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "scikit-learn==1.5.2",
    "uvicorn[standard]==0.32.0",
    "web3==7.4.0",
    "xgboost==2.1.1",
]
